# fencepass

./: .gitignore  CMakeLists.txt  FencePass.cpp  FencePassBaselineNaive.cpp  README.md  bench_llvm.sh  clang-pass-wrapper.sh  compare_passes.sh  compare_passes_dinu.sh  perf_bench.sh
benchmarks/: README.md
benchmarks/ir/: bubblesort.ll  fibonacci.ll  linked_list.ll  matrix_mul.ll  quicksort.ll  strlen_count.ll
benchmarks/src/: bubblesort.c  fibonacci.c  linked_list.c  matrix_mul.c  quicksort.c  strlen_count.c
test-files/: README.md  a.bc  a.c  a2.bc  a2.ll  sb.c  sb.ll
